- Fix bug preventing KeyMove setup code values > 2047 from being correctly imported when loading a .ir file (Graham)
- Implement highlighting (Graham)
-- Alpha 2 --
- Create File/Set Directory menu and implement entries to change RDF Path and Image Path (Graham)
- Use JDirectoryChooser instead of JFileChooser when there are no RDF/Map files found on opening RemoteMaster (Graham)

Changes for v2.00
- Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
- Split off a new class, MacroDefinitionBox, from MacroDialog to allow its re-use with Timed Macros. (Graham)
- Restore double-click to edit table cells (Greg)
- Typing when not in edit mode will start edit mode and replace cell contents (Greg)
- Create new interface, ButtonEnabler, and use it to improve logical separation between MacroDefinitionBox and MacroDialog. (Graham)
- Fix Setup.vbs for Windows users who don't run as Admin, Updated Readme.html (Greg)
- Implement Timed Macros (Graham)
-- Preview 3 --
- Implement File/New (Graham)
- Implement File/Open of Sling Learned Signal XML files (Greg)
- Add toolbar button to open RDF for viewing or live editing (Graham)
- Fix Fujitsu protocol (Greg)
- Append " (untested)" to notes for Sling Learned Signals when appropriate (Greg)
- RMIR: allow multicell selection in most tables, and Copy item in popup menu to copy to the clipboard (Greg)
- Add display of Signature, Processor, Interface and Extender Version to Raw Data tab (Graham)
- Implement the ExtenderVersionAddr and RDFVersionAddr parameters of the RDF [General] section (Graham).
- Change the toolbar icon for File/Open (Graham).
- Added Bound Key to Learned Signal edit dialog, and enabled OK/Cancel button (Greg)
- Removed New button and context menu item from Learned Signal tab (Greg)
- Fixed Clone button and content menu item on Learned Signal tab (Greg)
- Enable column reordering in most tables (Greg)