@@ -98,7 +98,12 @@ public class KeyMoveTableModel extends JP1TableModel< KeyMove >
    */
   public int getColumnCount()
   {
-    return colNames.length;
+    int count = colNames.length - 1;
+    if ( remoteConfig != null && remoteConfig.allowHighlighting() )
+    {
+      ++count;
+    }
+    return count;
   }
 
   /** The col names. */
