@@ -57,7 +57,12 @@ public class LearnedSignalTableModel extends JP1TableModel< LearnedSignal >
    */
   public int getColumnCount()
   {
-    return colNames.length;
+    int count = colNames.length - 1;
+    if ( remoteConfig != null && remoteConfig.allowHighlighting() )
+    {
+      ++count;
+    }
+    return count;
   }
 
   /*
