@@ -41,7 +41,12 @@ public class ProtocolUpgradeTableModel extends JP1TableModel< ProtocolUpgrade >
    */
   public int getColumnCount()
   {
-    return colNames.length;
+    int count = colNames.length - 1;
+    if ( remoteConfig != null && remoteConfig.allowHighlighting() )
+    {
+      ++count;
+    }
+    return count;
   }
 
   /** The Constant colNames. */
