@@ -42,6 +42,7 @@ public class UnsignedByteRenderer extends DefaultTableCellRenderer
   public void setRemoteConfig( RemoteConfiguration remoteConfig )
   {
     Remote remote = remoteConfig.getRemote();
+    this.remoteConfig = remoteConfig;
     savedData = remoteConfig.getSavedData();
     settingAddresses = remote.getSettingAddresses();
     highlight = remoteConfig.getHighlight();
@@ -73,25 +74,29 @@ public class UnsignedByteRenderer extends DefaultTableCellRenderer
   @Override
   public void paint( Graphics g )
   {
-    Dimension d = component.getSize();
-    int end = highlight.length - 1;
-    if ( settingAddresses.containsKey( offset ) )
+    if ( remoteConfig.allowHighlighting() )
     {
-      for ( int i = 0; i < 8; i++ )
+      Dimension d = component.getSize();
+      int end = highlight.length - 1;
+      if ( settingAddresses.containsKey( offset ) )
       {
-        g.setColor( highlight[ end - 8 * settingAddresses.get( offset ) - i ] );
-        g.fillRect( d.width - 3 * i - 3, 0, 2, d.height );
+        for ( int i = 0; i < 8; i++ )
+        {
+          g.setColor( highlight[ end - 8 * settingAddresses.get( offset ) - i ] );
+          g.fillRect( d.width - 3 * i - 3, 0, 2, d.height );
+        }
       }
-    }
-    else
-    {
-      g.setColor( highlight[ offset ] );
-      g.fillRect( 0, 0, d.width, d.height );
+      else
+      {
+        g.setColor( highlight[ offset ] );
+        g.fillRect( 0, 0, d.width, d.height );
+      }
     }
     super.paint( g );
   }
   
   private int offset;
+  private RemoteConfiguration remoteConfig = null;
   private Component component = null;
   private HashMap< Integer, Integer > settingAddresses = null;
   private Color[] highlight = null;
