@@ -9,6 +9,8 @@ Changes for v2.01
 -- Alpha 2 --
 - Create File/Set Directory menu and implement entries to change RDF Path and Image Path (Graham)
 - Use JDirectoryChooser instead of JFileChooser when there are no RDF/Map files found on opening RemoteMaster (Graham)
+- Use JDirectoryChooser instead of JFileChooser in Options/Folders menu of KeyMapMaster (Graham)
+- Make highlighting an option, defaulting to off (Graham)
 
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
